--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -5,6 +5,11 @@
 {% block content %}
 
 <div class='container'>
+
+    <div>
+        <a href='{% url 'home:send_email' %}'>Send Email</a>
+    </div>
+
     <p class='fs-6 fw-light m-4 text-center mx-5'>
         Create this site for study more drf and i want to have my own site.
         Then i think its greate idea to lern more about writing site better.
